got datedropper working, still has a bug!!!
<, >, and check mark do not show. Have to figure out what is going on

--- a/index.html
+++ b/index.html
@@ -5,32 +5,39 @@
   <title>Datedropper WIA Presentation</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
 
+
+  <link rel="stylesheet" type="text/css" href="css/datedropper.min.css"/>
   <link rel="stylesheet" type="text/css" href="css/main.css"/>
 
-  <link rel="stylesheet" type="text/css" href="js/datedropper.css">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
 <body>
 
-<p>Hello</p>
-
-<input type="text" id="departure" />
-
-
-
-
-
-
-
-
-
+  <ul>
+    <li>
+      <input type="text" id="fade">
+      <small>Fade In</small>
+    </li>
+    <li>
+      <input type="text" id="bounce">
+      <small>Bounce</small>
+    </li>
+  </ul>
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="js/datedropper.js"></script>
+
+
+
+
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script src="js/datedropper.min.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
