fixed all problems
was missing a folder

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <title>Datedropper WIA Presentation</title>
 
+  <!--META TAGS -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
 
-
+  <!--STYLE -->
   <link rel="stylesheet" type="text/css" href="css/datedropper.min.css"/>
   <link rel="stylesheet" type="text/css" href="css/main.css"/>
 
