--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+
   <title>Datedropper WIA Presentation</title>
 
   <!--META TAGS -->
@@ -9,7 +10,7 @@
   <meta charset="UTF-8">
 
   <!--STYLE -->
-  <link rel="stylesheet" type="text/css" href="css/datedropper.min.css"/>
+  <link rel="stylesheet" type="text/css" href="js/datedropper/datedropper.css"/>
   <link rel="stylesheet" type="text/css" href="css/main.css"/>
 
 
@@ -19,6 +20,10 @@
 
   <ul>
     <li>
+      <input type="text" id="tryhard">
+      <small>Try Hard</small>
+    </li>
+    <li>
       <input type="text" id="fade">
       <small>Fade In</small>
     </li>
@@ -26,6 +31,7 @@
       <input type="text" id="bounce">
       <small>Bounce</small>
     </li>
+
   </ul>
 
 
@@ -36,8 +42,8 @@
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-  <script src="js/datedropper.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script src="js/datedropper/datedropper.js"></script>
   <script src="js/main.js"></script>
 
 </body>
